Motion Tracking Movie clip editor graph #51158

Closed
opened 2017-04-09 14:27:28 +02:00 by Samuel · 4 comments

System Information
windows 10
intel core i7 7700-HQ
nvidia gtx1050
(DEll XPS 14 9560)

Blender Version
2.78c

Short description of error
using motion tracking you want to delet trackers that are jumpy. normaly you woud use the graphe of the movie clip editor but all cuves are unclickabel but in many tutorial this feature is just because this makes it way easier exampel of other with same problem: http://blender.stackexchange.com/questions/2700/why-can-i-not-select-camera-trackers-in-the-graph-view-of-the-movie-clip-editor

Exact steps for others to reproduce the error
just click the graphs of the movie clip editor blenderprojekt:Motion_Tracking_5.blend
video clip used: 20170409_130233.mp4

**System Information** windows 10 intel core i7 7700-HQ nvidia gtx1050 (DEll XPS 14 9560) **Blender Version** 2.78c **Short description of error** using motion tracking you want to delet trackers that are jumpy. normaly you woud use the graphe of the movie clip editor but all cuves are unclickabel but in many tutorial this feature is just because this makes it way easier exampel of other with same problem: http://blender.stackexchange.com/questions/2700/why-can-i-not-select-camera-trackers-in-the-graph-view-of-the-movie-clip-editor **Exact steps for others to reproduce the error** just click the graphs of the movie clip editor blenderprojekt:[Motion_Tracking_5.blend](https://archive.blender.org/developer/F540389/Motion_Tracking_5.blend) video clip used: [20170409_130233.mp4](https://archive.blender.org/developer/F540390/20170409_130233.mp4)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @speatzle

Added subscriber: @speatzle

This issue was referenced by a40f15d04f

This issue was referenced by a40f15d04f534d929509388592ee6288229e9e3c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51158
No description provided.