Fix T51158: Motion Tracking Movie clip editor graph